Fixed broken style on notification

--- a/app/assets/stylesheets/game.css
+++ b/app/assets/stylesheets/game.css
@@ -23,6 +23,11 @@
     top: 15px;
 }
 
+.body.loading {
+    margin-top: 50px;
+    height: 100px;
+}
+
 .play .modal-backdrop {
     z-index: 8000;
 }
